[MH-146] Fix text wrapping

--- a/myhpom/static/myhpom/include/_upload_widget.scss
+++ b/myhpom/static/myhpom/include/_upload_widget.scss
@@ -1,5 +1,6 @@
 .advance-directive-widget {
     flex-grow: 1;
+    width: 100%;
 }
 
 .advance-directive-widget__breadcrumbs {
@@ -55,6 +56,7 @@
 
 .advance-directive-widget__body {
     flex-grow: 1;
+    width: 100%;
 }
 
 .advance-directive-widget__buttons-container {
